# Group-4-Package

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
.ipynb_checkpoints/: CONTRIBUTING-checkpoint.md
docs/: example.ipynb  make.bat
docs/.ipynb_checkpoints/: conf-checkpoint.py
group4package/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
group4package/.github/workflows/: ci-cd.yml
group4package/docs/: Makefile
group4package/src/group4package/: __init__.py
group4package/tests/: test_metrics.py  test_summary_stats.py
src/group4package/: function_count_plot.py  group4package.py  metrics_function.py
tests/: test_count_plot.py  test_metrics.py  test_preprocess.py  test_summary_stats.py
tests/.ipynb_checkpoints/: test_group4package-checkpoint.py
