[tool.poetry]
name = "group4package"
version = "0.1.2"
description = "Package containing functions to run Group 4's Data Analysis"
authors = ["Hannah, Diana, Jordan, Shravan "]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "=3.5.1"
pandas = ">=1.4.2"
numpy = "1.21.5"
seaborn = "^0.11.2"
argparse = "^1.4.0"
scikit-learn = "^1.0.2"
plotly = "^5.6.0"
pandoc = "^2.1"



[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
sklearn = "^0.0"
pytest-cov = "^3.0.0"
myst-nb = {version = "^0.13.2", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.27.1"



[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
